...
                        ),
                      ),
                      SizedBox(height: 50),
                      Padding(
                        padding: const EdgeInsets.symmetric(horizontal: 10),
                        child: TextField(
                            key: const Key('emailfield'),
                            autocorrect: false,
                            controller: _emailTextController,
                            enabled: !state.isSubmitting,
                            keyboardType: TextInputType.emailAddress,
                            decoration: InputDecoration(
                              isCollapsed: true,
...
                            }),
                      ),
                      SizedBox(height: 20),
                      Padding(
                        padding: const EdgeInsets.symmetric(horizontal: 10),
                        child: TextField(
                            key: const Key('passwordfield'),
                            autocorrect: false,
                            enabled: !state.isSubmitting,
                            controller: _passwordTextController,
                            obscureText: !isPasswordVisible,
                            decoration: InputDecoration(
                              suffixIcon: GestureDetector(
...
                        alignment: Alignment.center,
                        child: Container(
                          margin: EdgeInsets.symmetric(horizontal: 10),
                          height: 45,
                          width: MediaQuery.of(context).size.width,
                          child: FlatButton(
                            key: const Key('SignInButton'),
                            padding: EdgeInsets.symmetric(horizontal: 10),
                            color: colorScheme.primary,
                            child: Text(
                              'Sign In',
                              style: TextStyle(
                                  color: Colors.white,
...
                      SizedBox(
                          height:
                              MediaQuery.of(context).size.height - 430 - 115),

                      //30
                      GestureDetector(
                        key: const Key('NavigateToRegisterPage'),
                        onTap: () {
                          if (!state.isSubmitting)
                            FocusScope.of(context)
                                .requestFocus(new FocusNode());

                          context.read<AuthBloc>().add(UnregisteredUser());
...
